tests/build/fail/widget_new/incorrect_arg_type1.stderr
error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
 --> $DIR/incorrect_arg_type1.rs:7:18
  |
7 |         margin = true
  |                  ^^^^ the trait `IntoVar<SideOffsets>` is not implemented for `bool`
  |
  = help: the following implementations were found:
            <bool as IntoVar<AutoSize>>
            <bool as IntoVar<CaptureMode>>
            <bool as IntoVar<FactorNormal>>
            <bool as IntoVar<FontFeatureState>>
          and 2 others
  = note: required by `margin_ArgsImpl::<T_margin>::new`

error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
  --> $DIR/incorrect_arg_type1.rs:7:9
   |
7  |         margin = true
   |         ^^^^^^ the trait `IntoVar<SideOffsets>` is not implemented for `bool`
   |
  ::: $WORKSPACE/src/properties/margin_.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |                                                -------------------- required by this bound in `margin_ArgsImpl`
   |
   = help: the following implementations were found:
             <bool as IntoVar<AutoSize>>
             <bool as IntoVar<CaptureMode>>
             <bool as IntoVar<FactorNormal>>
             <bool as IntoVar<FontFeatureState>>
           and 2 others
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
  --> $DIR/incorrect_arg_type1.rs:7:9
   |
7  |         margin = true
   |         ^^^^^^ the trait `IntoVar<SideOffsets>` is not implemented for `bool`
   |
  ::: $WORKSPACE/src/properties/margin_.rs
   |
   | #[property(outer)]
   | ------------------ required by this bound in `__margin_set_debug`
   |
   = help: the following implementations were found:
             <bool as IntoVar<AutoSize>>
             <bool as IntoVar<CaptureMode>>
             <bool as IntoVar<FactorNormal>>
             <bool as IntoVar<FontFeatureState>>
           and 2 others
   = note: required because of the requirements on the impl of `margin_Args` for `margin_ArgsImpl<bool>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
